--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "request": "2.11.4",
       "connect-assets": "2.3.3",
       "connect-redis": "1.4.4",
-      "redis-url": "0.1.0"
+      "redis-url": "0.1.0",
+      "pretty-camel": "0.0.7"
    },
    "scripts": {
       "test": "mocha --compilers coffee:coffee-script --reporter spec --recursive"
