--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
       "stylus": "0.30.1",
       "request": "2.11.4",
       "connect-redis": "1.4.4",
-      "redis-url": "0.1.0",
-      "connect-assets": "2.3.3-patched"
+      "redis-url": "0.1.0"
    }, 
+   "patchedDependencies": {
+      "connect-assets": "2.3.3"
+   },
    "devDependencies": {
       "zombie": "1.4.1",
       "mocha": "1.7.4",
-      "should": "1.2.1"
+      "should": "1.2.1",
+      "fs-extra": "0.3.2"
    },
    "scripts": {
       "test": "mocha --compilers coffee:coffee-script --reporter spec -t 5500 -s 400"
