--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
       "stylus": "0.30.1",
       "request": "2.11.4",
       "connect-redis": "1.4.4",
-      "redis-url": "0.1.0"
-   }, 
-   "patchedDependencies": {
-      "connect-assets": "2.3.3"
+      "redis-url": "0.1.0",
+      "connect-assets": "2.3.3-patched"
    },
    "devDependencies": {
       "zombie": "1.4.1",
