--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
       "request": "2.11.4",
       "connect-redis": "1.4.4",
       "redis-url": "0.1.0",
-      "connect-assets": "2.3.3"
+      "mime": "1.2.2",
+      "snockets": "1.3.8",
+      "underscore": "1.1.7"
    },
    "devDependencies": {
       "zombie": "1.4.1",
