--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "redis-url": "0.1.0",
       "mime": "1.2.2",
       "snockets": "1.3.8",
-      "underscore": "1.1.7"
+      "underscore": "1.1.7",
+      "async": "0.1.22"
    },
    "devDependencies": {
       "zombie": "1.4.1",
@@ -26,6 +27,6 @@
       "fs-extra": "0.3.2"
    },
    "scripts": {
-      "test": "mocha --compilers coffee:coffee-script --reporter spec -t 5500 -s 400"
+      "test": "mocha --compilers coffee:coffee-script --reporter spec -t 6500 -s 150"
    }
 }
