--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
       "mime": "1.2.2",
       "snockets": "1.3.8",
       "underscore": "1.1.7",
-      "async": "0.1.22"
+      "async": "0.1.22",
+      "zombie": "1.4.1",
+      "qs": "0.5.3"
    },
    "devDependencies": {
-      "zombie": "1.4.1",
       "mocha": "1.7.4",
       "should": "1.2.1",
       "fs-extra": "0.3.2"
