--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "express": "3.0.1",
       "jade": "0.27.7",
       "stylus": "0.30.1",
-      "request": "2.11.4",
+      "request": "2.12.0",
       "connect-redis": "1.4.4",
       "redis-url": "0.1.0",
       "mime": "1.2.2",
@@ -20,7 +20,8 @@
       "underscore": "1.1.7",
       "async": "0.1.22",
       "zombie": "1.4.1",
-      "qs": "0.5.3"
+      "qs": "0.5.3",
+      "node-salesforce": "0.4.0"
    },
    "devDependencies": {
       "mocha": "1.7.4",
