--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "underscore": "1.1.7",
       "async": "0.1.22",
       "qs": "0.5.3",
-      "node-salesforce": "0.4.0"
+      "node-salesforce": "0.4.0",
+      "zombie": "1.4.1"
    },
    "devDependencies": {
       "mocha": "1.7.4",
