--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "async": "0.1.22",
       "qs": "0.5.3",
       "node-salesforce": "0.4.0",
-      "zombie": "1.4.1"
+      "cloudinary": "1.0.1"
    },
    "devDependencies": {
       "mocha": "1.7.4",
