--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
       "underscore": "1.1.7",
       "async": "0.1.22",
       "qs": "0.5.3",
-      "node-salesforce": "0.4.0",
-      "cloudinary": "1.0.1"
+      "cloudinary": "1.0.1",
+      "mongoose": "3.5.4",
+      "mongoose-types": "1.0.3"
    },
    "devDependencies": {
       "mocha": "1.7.4",
