--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "author": "Blake VanLandingham",
-   "name": "Fannect",
+   "name": "fannect-api",
    "version": "0.0.1",
    "engines": {
       "node": ">= 0.8.x",
@@ -19,7 +19,8 @@
       "qs": "0.5.3",
       "cloudinary": "1.0.1",
       "mongoose": "3.5.4",
-      "mongoose-types": "1.0.3"
+      "mongoose-types": "1.0.3",
+      "redis": "0.8.2"
    },
    "devDependencies": {
       "mocha": "1.7.4",
