--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
       "cloudinary": "1.0.1",
       "mongoose": "3.5.4",
       "mongoose-types": "1.0.3",
-      "redis": "0.8.2"
+      "redis": "0.8.2",
+      "csv": "0.2.6"
    },
    "devDependencies": {
       "mocha": "1.7.4",
