--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common"]
 	path = common
-	url = git@github.com:Fannect/fannect-common.git
+	url = https://fannectsubmodule:Fan14Connect@github.com/Fannect/fannect-common
