--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
       "mongoose-types": "1.0.3",
       "redis": "0.8.2",
       "csv": "0.2.6",
-      "loggly": "0.3.11"
+      "loggly": "0.3.11",
+      "oauth": "0.9.8"
    },
    "devDependencies": {
       "mocha": "1.7.4",
