--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "csv": "0.2.6",
       "loggly": "0.3.11",
       "sendgrid-web": "0.0.4",
-      "kaiseki": "*"
+      "kaiseki": "0.4.0"
    },
    "devDependencies": {
       "mocha": "1.7.4",
