--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
       "csv": "0.2.6",
       "loggly": "0.3.11",
       "sendgrid-web": "0.0.4",
-      "kaiseki": "0.4.0"
+      "kaiseki": "0.4.0",
+      "node-html-encoder": "0.0.2"
    },
    "devDependencies": {
       "mocha": "1.7.4",
