--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "fs-extra": "0.3.2"
    },
    "scripts": {
-      "test": "mocha --compilers coffee:coffee-script --reporter spec -t 10000 -s 300"
+      "test": "mocha --compilers coffee:coffee-script --reporter spec -t 10000 -s 300",
+      "test-common": "mocha --compilers coffee:coffee-script --reporter spec -t 10000 -s 300 ./common/test/run.coffee"
    }
 }
